openshift/read_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: read
spec:
  replicas: 2
  selector:
    matchLabels:
      app: read
  template:
    metadata:
      labels:
        app: read
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: read
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /data
          image: 'quay.io/jonkey/excel:1.4'
      restartPolicy: Always
