openshift/write_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: write
spec:
  replicas: 2
  selector:
    matchLabels:
      app: write
  template:
    metadata:
      labels:
        app: write
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: write
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /data
          image: 'quay.io/jonkey/excel:1.3'
      restartPolicy: Always
