openshift/read_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: read
  labels:
    app: read
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: read
