openshift/write_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: write
  labels:
    app: write
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: write
